# pybracelet

./: .gitignore  BData.py  README.md  Untitled2.ipynb  color_map.py  pyproject.toml  requirements.txt  solver.py  t.py
pybracelet/: BData.py
tests/: test_bchunk.py  test_bdata.py
tests/bench/: test_bench_brute_iteration.py
