[project]
name = "pybracelet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.19",
    "freesimplegui>=5.2.0.post1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pysimplegui>=5.0.8.3",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
]
